--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,7 +108,7 @@ header {
 
 .top-wrapper {
   width:100%;
-  background-image: url(../img/top.png);
+  background-image: url(top.png);
   background-size: cover;
   padding: 180px 0 100px 0;
   color:white;
