--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ header {
   height: 65px;
   position: fixed;
   top:0px;
-  z-index: 10;
+  z-index: 20;
 }
 
 .header-left {
@@ -33,6 +33,7 @@ header {
 .header-left img {
   margin-top: 20px;
   width: 124px;
+  cursor: pointer;
 }
 
 .sp-menu {
@@ -46,6 +47,21 @@ header {
   line-height: 65px;
 }
 
+#sp-btn {
+  display: none;
+  background-color: rgba(34,49,52,0.9);
+  width:100%;
+  position: fixed;
+  top:65px;
+  z-index: 5;
+  text-align: center;
+}
+
+.btn-header_sp {
+  padding: 20px 0 ;
+  display: block;
+  color:white;
+}
 
 .header-right {
   float:right;
@@ -65,7 +81,7 @@ header {
 }
 
 
-#modal-wrapper {
+#modal-wrapper, #modal-wrapper-sign{
   position: fixed;
   top:0;
   right:0;
@@ -87,6 +103,17 @@ header {
   border-radius: 5px;
 }
 
+#modal-signin {
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 50px 100px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+
 #modal-login p {
   font-size: 20px;
 }
@@ -104,11 +131,18 @@ header {
   width: 250px;
 }
 
+.fa-times {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: rgba(128, 128, 128, 0.46);
+cursor: pointer;
+}
 
 
 .top-wrapper {
   width:100%;
-  background-image: url(top.png);
+  background-image: url(../img/top.png);
   background-size: cover;
   padding: 180px 0 100px 0;
   color:white;
